; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libbe/extr_be_info.c_be_get_dataset_props.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libbe/extr_be_info.c_be_get_dataset_props.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }
%struct.TYPE_5__ = type { i32, i32*, %struct.TYPE_6__* }

@ZFS_TYPE_FILESYSTEM = common dso_local global i32 0, align 4
@ZFS_TYPE_SNAPSHOT = common dso_local global i32 0, align 4
@BE_ERR_ZFSOPEN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @be_get_dataset_props(%struct.TYPE_6__* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_6__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_5__, align 8
  %10 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  %11 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 2
  store %struct.TYPE_6__* %11, %struct.TYPE_6__** %12, align 8
  %13 = load i32*, i32** %7, align 8
  %14 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 1
  store i32* %13, i32** %14, align 8
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 0
  store i32 1, i32* %15, align 8
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i8*, i8** %6, align 8
  %20 = load i32, i32* @ZFS_TYPE_FILESYSTEM, align 4
  %21 = load i32, i32* @ZFS_TYPE_SNAPSHOT, align 4
  %22 = or i32 %20, %21
  %23 = call i32* @zfs_open(i32 %18, i8* %19, i32 %22)
  store i32* %23, i32** %8, align 8
  %24 = icmp eq i32* %23, null
  br i1 %24, label %25, label %27

25:                                               ; preds = %3
  %26 = load i32, i32* @BE_ERR_ZFSOPEN, align 4
  store i32 %26, i32* %4, align 4
  br label %33

27:                                               ; preds = %3
  %28 = load i32*, i32** %8, align 8
  %29 = call i32 @prop_list_builder_cb(i32* %28, %struct.TYPE_5__* %9)
  store i32 %29, i32* %10, align 4
  %30 = load i32*, i32** %8, align 8
  %31 = call i32 @zfs_close(i32* %30)
  %32 = load i32, i32* %10, align 4
  store i32 %32, i32* %4, align 4
  br label %33

33:                                               ; preds = %27, %25
  %34 = load i32, i32* %4, align 4
  ret i32 %34
}

declare dso_local i32* @zfs_open(i32, i8*, i32) #1

declare dso_local i32 @prop_list_builder_cb(i32*, %struct.TYPE_5__*) #1

declare dso_local i32 @zfs_close(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
